# gd32-hal

./: Cargo.toml  LICENSE  README.md
src/: gpio.rs  lib.rs  util.rs
src/clocks/: f.rs  mod.rs
